--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <h2>Admin Access</h2>
                     <p>Enter password to manage issues.</p>
                     <form id="admin-login-form">
-                        <input type="password" id="admin-password" placeholder="Password (admin123)" required>
+                        <input type="password" id="admin-password" placeholder="Password" required>
                         <button type="submit" class="btn btn-primary btn-block">Login</button>
                     </form>
                 </div>
